# pomodoro

./: .dockerignore  .prod.env  Dockerfile  README.md  alembic.ini  async test.py  dependency.py  docker-compose.test.yml  docker-compose.yml  exception.py  main.py  pyproject.toml  settings.py
.github/workflows/: .github.ci.yml
alembic/: env.py
alembic/versions/: 0fd29957eb31_change_access_token.py  1f275daebdfc_change_access_token.py  2c76b10983ef_update_userprofile_model.py  627c88852d7e_initial_migration.py
app/: dependency.py  exception.py  main.py  settings.py
app/broker/: consumer.py  producer.py
app/client/: google.py  yandex.py
app/handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
app/infrastructure/cache/: accessor.py
app/infrastructure/database/: __init__.py  accessor.py  database.py
app/models/: __init__.py  tasks.py  user.py
app/repository/: __init__.py  cache_task.py  task.py  user.py
app/schemas/: __init__.py
app/service/: __init__.py  auth.py  task.py  user.py
app/tasks/: handlers.py  models.py  schema.py  service.py
app/tasks/repository/: __init__.py  cache_task.py  task.py
app/timer/: handlers.py  models.py  repository.py  schema.py  service.py
app/users/auth/: handlers.py  schema.py  service.py
app/users/auth/client/: __init__.py  google.py  mail.py  yandex.py
app/users/user_profile/: handlers.py  models.py  repository.py  schema.py  service.py
cache/: accessor.py
client/: google.py  yandex.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: auth.py  ping.py  tasks.py  user.py
migrations_async/: env.py
migrations_async/versions/: 23c05ade99e5_change_user_profilee.py  2c98e79dc6fa_update_userprofile_model.py  3de91cdd7c2e_new_change.py  4c6e6720f9d4_create_users_model.py  59bbd414bb06_async_version_models.py  7abc5e9eb58f_correct_async_version.py  8f4469bded16_remove_category.py  976085d51303_add_foreign_key.py  b09ed3852bd7_commit.py
models/: __init__.py  tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
schemas/: __init__.py
service/: __init__.py  auth.py  task.py  user.py
shemas/: __init__.py  tasks.py
tests/: conftest.py
tests/fixtures/: infrastructure.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/users/: user_model.py
tests/integration/: test_auth_service.py
tests/unit/auth/: test_auth_service.py
worker/: celery.py
