[project]
name = "pomodoro-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Birobizhan",email = "fedorovd2005@gmail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "redis (>=6.3.0,<7.0.0)",
    "environs (>=14.3.0,<15.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pomodoro_poetry", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
