[project]
name = "pomodoro-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Birobizhan",email = "fedorovd2005@gmail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "redis (>=6.3.0,<7.0.0)",
    "environs (>=14.3.0,<15.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "requests (>=2.32.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "packaging (>=25.0,<26.0)",
    "pytest[async] (>=8.4.1,<9.0.0)",
    "twisted (>=25.5.0,<26.0.0)",
    "anyio (>=4.10.0,<5.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "pytest-tornasync (>=0.6.0.post2,<0.7.0)",
    "pytest-trio (>=0.8.0,<0.9.0)",
    "pytest-twisted (>=1.14.3,<2.0.0)",
    "pytest-factoryboy (>=2.8.1,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "gevent (>=25.5.1,<26.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "aio-pika (>=9.5.7,<10.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)"
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.11"
[tool.poetry]
packages = [{include = "pomodoro_poetry", from = "src"}]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
